--- a/predavanja1.ipynb
+++ b/predavanja1.ipynb
@@ -40,41 +40,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "output_type": "execute_result",
-     "data": {
-      "text/plain": [
-       "3"
-      ]
-     },
-     "metadata": {},
-     "execution_count": 2
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Seštevanje\n",
-    "1+2"
+    "1+6"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "output_type": "execute_result",
-     "data": {
-      "text/plain": [
-       "-1"
-      ]
-     },
-     "metadata": {},
-     "execution_count": 3
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Odštevanje\n",
     "1-2"
@@ -82,20 +60,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "output_type": "execute_result",
-     "data": {
-      "text/plain": [
-       "15"
-      ]
-     },
-     "metadata": {},
-     "execution_count": 5
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Množenje\n",
     "3*5"
@@ -103,20 +70,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "output_type": "execute_result",
-     "data": {
-      "text/plain": [
-       "2.5"
-      ]
-     },
-     "metadata": {},
-     "execution_count": 6
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Deljenje\n",
     "5/2"
@@ -124,20 +80,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "output_type": "execute_result",
-     "data": {
-      "text/plain": [
-       "1"
-      ]
-     },
-     "metadata": {},
-     "execution_count": 8
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Celo-številsko deljenje\n",
     "5//3"
@@ -145,20 +90,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "output_type": "execute_result",
-     "data": {
-      "text/plain": [
-       "2"
-      ]
-     },
-     "metadata": {},
-     "execution_count": 10
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Ostanek pri deljeju\n",
     "5%3"
@@ -166,20 +100,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "output_type": "execute_result",
-     "data": {
-      "text/plain": [
-       "16"
-      ]
-     },
-     "metadata": {},
-     "execution_count": 11
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Potenciranje\n",
     "2**4"
@@ -187,20 +110,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "output_type": "execute_result",
-     "data": {
-      "text/plain": [
-       "3.0"
-      ]
-     },
-     "metadata": {},
-     "execution_count": 13
-    }
-   ],
+   "outputs": [],
    "source": [
     "# S potenciranjem lahko izvedemo tudi korenjenje\n",
     "9**0.5"
@@ -208,20 +120,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "output_type": "execute_result",
-     "data": {
-      "text/plain": [
-       "4"
-      ]
-     },
-     "metadata": {},
-     "execution_count": 14
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Pravila vrstnega reda\n",
     "2 + 3 * 4 - 10"
@@ -229,20 +130,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "output_type": "execute_result",
-     "data": {
-      "text/plain": [
-       "-30"
-      ]
-     },
-     "metadata": {},
-     "execution_count": 15
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Z oklepaji lahko dodelimo prioriteto \n",
     "(2 + 3) * (4 - 10)"
@@ -258,7 +148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -275,7 +165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -290,23 +180,12 @@
    ],
    "cell_type": "code",
    "metadata": {},
-   "execution_count": 36,
-   "outputs": [
-    {
-     "output_type": "execute_result",
-     "data": {
-      "text/plain": [
-       "6"
-      ]
-     },
-     "metadata": {},
-     "execution_count": 36
-    }
-   ]
+   "execution_count": null,
+   "outputs": []
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -316,20 +195,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "output_type": "execute_result",
-     "data": {
-      "text/plain": [
-       "8"
-      ]
-     },
-     "metadata": {},
-     "execution_count": 38
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Kaj je sedaj shranjeno v x?\n",
     "x"
@@ -337,7 +205,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -347,7 +215,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -376,7 +244,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -386,20 +254,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "output_type": "execute_result",
-     "data": {
-      "text/plain": [
-       "177"
-      ]
-     },
-     "metadata": {},
-     "execution_count": 24
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Pokaži hišno številko\n",
     "hisna_stevilka"
@@ -415,7 +272,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -424,27 +281,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "output_type": "execute_result",
-     "data": {
-      "text/plain": [
-       "2"
-      ]
-     },
-     "metadata": {},
-     "execution_count": 26
-    }
-   ],
+   "outputs": [],
    "source": [
     "stevilo"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -453,20 +299,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "output_type": "execute_result",
-     "data": {
-      "text/plain": [
-       "4.123"
-      ]
-     },
-     "metadata": {},
-     "execution_count": 28
-    }
-   ],
+   "outputs": [],
    "source": [
     "stevilo"
    ]
@@ -480,18 +315,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "output_type": "execute_result",
      "data": {
       "text/plain": [
-       "float"
+       "int"
       ]
      },
      "metadata": {},
-     "execution_count": 29
+     "execution_count": 13
     }
    ],
    "source": [
@@ -520,55 +355,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "output_type": "execute_result",
-     "data": {
-      "text/plain": [
-       "'kar neki niz znakov'"
-      ]
-     },
-     "metadata": {},
-     "execution_count": 41
-    }
-   ],
+   "outputs": [],
    "source": [
     "'kar neki niz znakov'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "output_type": "execute_result",
-     "data": {
-      "text/plain": [
-       "'še en niz s številkami 1 2 3'"
-      ]
-     },
-     "metadata": {},
-     "execution_count": 42
-    }
-   ],
+   "outputs": [],
    "source": [
     "\"še en niz s številkami 1 2 3\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "output_type": "error",
      "ename": "SyntaxError",
-     "evalue": "invalid syntax (<ipython-input-43-8fe814b7e2ae>, line 2)",
+     "evalue": "invalid syntax (<ipython-input-15-8fe814b7e2ae>, line 2)",
      "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-43-8fe814b7e2ae>\"\u001b[0;36m, line \u001b[0;32m2\u001b[0m\n\u001b[0;31m    'nakaj'znakov'\u001b[0m\n\u001b[0m           ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-15-8fe814b7e2ae>\"\u001b[0;36m, line \u001b[0;32m2\u001b[0m\n\u001b[0;31m    'nakaj'znakov'\u001b[0m\n\u001b[0m           ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
      ]
     }
    ],
@@ -579,7 +392,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -590,7 +403,7 @@
       ]
      },
      "metadata": {},
-     "execution_count": 44
+     "execution_count": 16
     }
    ],
    "source": [
@@ -600,20 +413,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "output_type": "execute_result",
-     "data": {
-      "text/plain": [
-       "'nekaj\"znakov'"
-      ]
-     },
-     "metadata": {},
-     "execution_count": 45
-    }
-   ],
+   "outputs": [],
    "source": [
     "# ali\n",
     "'nekaj\"znakov'"
@@ -628,7 +430,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -645,7 +447,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -663,20 +465,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "prvi\tdrugi\ttretji\tčetrti\n"
+      "prvi\t\tdrugi\t\ttretji\t\tčetrti\n"
      ]
     }
    ],
    "source": [
     "# \\t pa kot tabulator:\n",
-    "print('prvi\\tdrugi\\ttretji\\tčetrti')"
+    "print('prvi\\t\\tdrugi\\t\\ttretji\\t\\tčetrti')"
    ]
   },
   {
@@ -688,7 +490,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -699,7 +501,7 @@
       ]
      },
      "metadata": {},
-     "execution_count": 49
+     "execution_count": 21
     }
    ],
    "source": [
@@ -709,7 +511,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -728,7 +530,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -742,8 +544,8 @@
    "source": [
     "# V nizu lahko s pomočjo indeksov dostopamo do posameznih znakov.\n",
     "# Indeks prvega elementa v nizu je 0, naslednjega 1 in tako naprej.\n",
-    "#      0 1 2 3\n",
-    "#      P e p i\n",
+    "#      0 1 2 3 4\n",
+    "#      M i c k a\n",
     "# Indeks lahko uporabio tako, da ga damo med oglate oklepaje.\n",
     "# Znak z indeksom nič v spremnljivki ime je tako:\n",
     "print(ime[0])"
@@ -751,7 +553,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -769,14 +571,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "i\n"
+      "a\n"
      ]
     }
    ],
@@ -787,7 +589,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -806,7 +608,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -824,7 +626,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -842,7 +644,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -860,7 +662,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -878,7 +680,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -896,7 +698,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -922,7 +724,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -940,7 +742,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -950,7 +752,7 @@
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-69-304fa5de82ae>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m# Namest a bi radi imeli e:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0mbarva\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m3\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m'e'\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      3\u001b[0m \u001b[0;31m# kar nam seveda javi napako\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m<ipython-input-36-304fa5de82ae>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m# Namest a bi radi imeli e:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0mbarva\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m3\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m'e'\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      3\u001b[0m \u001b[0;31m# kar nam seveda javi napako\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
       "\u001b[0;31mTypeError\u001b[0m: 'str' object does not support item assignment"
      ]
     }
@@ -963,14 +765,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "Micka rdeča\n"
+      "Micka\t rdeča\n"
      ]
     }
    ],
@@ -981,7 +783,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
@@ -1007,7 +809,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
@@ -1018,7 +820,7 @@
       ]
      },
      "metadata": {},
-     "execution_count": 72
+     "execution_count": 44
     }
    ],
    "source": [
@@ -1028,7 +830,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
@@ -1039,7 +841,7 @@
       ]
      },
      "metadata": {},
-     "execution_count": 73
+     "execution_count": 45
     }
    ],
    "source": [
@@ -1049,7 +851,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
@@ -1068,7 +870,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
@@ -1079,7 +881,7 @@
       ]
      },
      "metadata": {},
-     "execution_count": 75
+     "execution_count": 47
     }
    ],
    "source": [
@@ -1088,7 +890,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
@@ -1099,7 +901,7 @@
       ]
      },
      "metadata": {},
-     "execution_count": 76
+     "execution_count": 48
     }
    ],
    "source": [
@@ -1116,35 +918,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "Pepi je star 22 let\n"
+      "Micka je star 23 let\n"
      ]
     }
    ],
    "source": [
     "# Včasih hočemo v niz vključiti vrednosti spremenljiv, ki jih imamo v proramu\n",
     "# To lahko naredimo z metodo format, ki v niz na mesta z znaki {} vstavi svoje argumente:\n",
-    "ime = 'Pepi'\n",
-    "starost = 22\n",
+    "ime = 'Micka'\n",
+    "starost = 23\n",
     "print('{} je star {} let'.format(ime, starost))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "Pepi je star 22 let\n"
+      "Micka je star 23 let\n"
      ]
     }
    ],
@@ -1152,6 +954,13 @@
     "# Od verzije Pythona 3.6 je to še krajše:\n",
     "print(f'{ime} je star {starost} let')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ]
 }
