--- a/predavanje2.ipynb
+++ b/predavanje2.ipynb
@@ -59,9 +59,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "Vsota je: 11\n"
+     ]
+    }
+   ],
    "source": [
     "x = input('vnesi prvo stevilo: ')\n",
     "y = input('vnesi drugo število: ')\n",
@@ -70,22 +78,24 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "To rešimo tako, da niz spremenimo v število:"
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "Vsota je: 3\n"
+     ]
+    }
+   ],
    "source": [
     "x = input('vnesi prvo stevilo: ')\n",
     "y = input('vnesi drugo število: ')\n",
     "z = int(x) + int(y)\n",
-    "print(\"Vsota je: \" + str(z))"
+    "#print(\"Vsota je: \" + str(z))\n",
+    "print((\"Vsota je: {z}\").pf)"
    ]
   },
   {
@@ -232,8 +242,8 @@
    "metadata": {},
    "source": [
     "Logični pogoji:\n",
-    "and ... logični in\n",
-    "or ... logični ali \n",
+    "and ... logični in,\n",
+    "or ... logični ali,\n",
     "not ... negacija"
    ]
   },
@@ -257,6 +267,19 @@
     "x = int(input('vnesi prvo stevilo: '))\n",
     "y = int(input('vnesi drugo število: '))\n",
     "if x>y and x>10:\n",
+    "    print(f\"{x} je večji od {y} in večji od 10\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Primer za logični operator 'or'\n",
+    "x = int(input('vnesi prvo stevilo: '))\n",
+    "y = int(input('vnesi drugo število: '))\n",
+    "if x>y or x>10:\n",
     "    print(f\"{x} je večji od {y} in večji od 10\")"
    ]
   },
@@ -289,24 +312,52 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
      "output_type": "stream",
+     "name": "stdout",
      "text": [
-      "Koliko je 5 + 7? 12\n",
-      "Bravo, čestitamo!\n"
+      "a je manjši ali enak b\n"
      ]
     }
    ],
    "source": [
-    "odgovor = int(input('Koliko je 5 + 7? '))\n",
-    "if odgovor == 12:\n",
-    "    print('Bravo, čestitamo!')\n",
+    "a = 9\n",
+    "b = 9\n",
+    "if a>b:\n",
+    "    print(\"a je večji od b\")\n",
     "else:\n",
-    "    print('Napačen odgovor!')"
+    "    print(\"a je manjši ali enak b\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "y je večji od z\n"
+     ]
+    }
+   ],
+   "source": [
+    "# elif \n",
+    "x = 5\n",
+    "y = 8\n",
+    "z = 7\n",
+    "if x>y:\n",
+    "    print(\"x je večji od y\")\n",
+    "elif x>z:\n",
+    "    print(\"x je večji od z\")\n",
+    "elif y>z:\n",
+    "    print(\"y je večji od z\")\n",
+    "else:\n",
+    "    print(\"nobeden od testov ni držal\")\n"
    ]
   },
   {
